syntax = "proto3";

package tshy0931.com.github.weichain.model.proto;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  primitive_wrappers: true
};

message CoinbaseProto {
    string script = 1;
}

message OutputProto {
    double value = 1;
    string address = 2;
    string blockHash = 3;
    int32 txIndex = 4;
    int32 outputIndex = 5;
    string scriptPubKey = 6;
    CoinbaseProto coinbase = 7;
}

message InputProto {
    OutputProto source = 1;
    string scriptSig = 2;
    int64 sequence = 3;
}

message TransactionProto {
    string hash = 1;
    int32 version = 2;
    int32 nTxIn = 3;
    repeated InputProto txIn = 4;
    int32 nTxOut = 5;
    repeated OutputProto txOut = 6;
    int32 lockTime = 7;
    int64 blockIndex = 8;
    double txFee = 9;
    int64 createTime = 10;
}

message BlockHeaderProto {
    string hash = 1;
    int32 version = 2;
    string prevHeaderHash = 3;
    string merkleRoot = 4;
    int64 time = 5;
    int32 height = 6;
    int64 nonce = 7;
}

message BlockBodyProto {
    string headerHash = 1;
    MerkleTreeProto merkleTree = 2;
    int32 nTx = 3;
    int64 size = 4;
    repeated TransactionProto transactions = 5;
}

message MerkleTreeProto {
    repeated string hashes = 1;
    int32 nTx = 2;
}

message AddressProto {
    string host = 1;
    int32 port = 2;
}